Fix checkbox fields spacing

--- a/css/compat/themes/compat-kosi-314-beta-1.css
+++ b/css/compat/themes/compat-kosi-314-beta-1.css
@@ -6,6 +6,10 @@ body.theme-kosi #order_review .woocommerce-checkout-review-order-table .order-to
   font-size: 15px;
 }
 
+body.theme-kosi div.woocommerce input[type=checkbox] {
+  margin-right: 5px;
+}
+
 body.theme-kosi .fc-wrapper .select2-container .select2-selection--single .select2-selection__rendered {
   padding-left: 15px;
   padding-right: 15px;
